[project]
##############################################################################
# Project metadata and dependencies for MemoryOS
##############################################################################

name = "MemoryOS"
version = "1.0.0"
description = "Intelligence Begins with Memory"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "MemTensor", email = "MemTensor@memtensor.cn" }
]

keywords = [
    "memory",
    "llm",
    "language model",
    "memoryOS",
    "agent",
    "kv cache",
    "lora",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai>=1.77.0",                     # Removed upper bound
    "ollama>=0.4.8",                      # Removed upper bound
    "transformers>=4.51.3",               # Removed upper bound
    "tenacity>=9.1.2,<10.0.0",           
    "fastapi[all]>=0.115.12",             # Removed upper bound
    "sqlalchemy>=2.0.41,<3.0.0",        
    "scikit-learn>=1.7.0,<2.0.0",       
    "fastmcp>=2.10.5,<3.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
]

[project.optional-dependencies]
all = [
    "neo4j (>=5.28.1,<6.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "chonkie (>=1.0.7,<2.0.0)",
    "markitdown[docx,pdf,pptx,xls,xlsx] (>=0.1.1,<0.2.0)",
    "torch>=2.7.1,<3.0.0",
    "sentence-transformers>=4.1.0",       # Removed upper bound
    "qdrant-client>=1.14.2,<2.0.0",
    "volcengine-python-sdk>=4.0.4,<5.0.0",
]
