[project]
name = "MemoryOS"
version = "1.0.0"
description = "Intelligence Begins with Memory"
requires-python = ">=3.10"

dependencies = [
    "openai==1.99.9",
    "ollama==0.5.3",
    "transformers==4.54.0",
    "tenacity==9.1.2",
    "fastapi==0.116.1",
    "sqlalchemy==2.0.41",
    "scikit-learn==1.7.1",
    "python-dateutil==2.9.0.post0",
]
