[project]
name = "MemoryOS"
version = "1.0.0"
description = "Intelligence Begins with Memory"
requires-python = ">=3.10"

dependencies = [
    # Critical packages pinned to your environment
    "openai==1.99.9",
    "ollama==0.5.3",
    "transformers==4.54.0",
    "sqlalchemy==2.0.41",
    "scikit-learn==1.7.1",
    "python-dateutil==2.9.0.post0",

    # Relaxed pins to avoid forced downgrades
    "tenacity>=9.1.2,<10.0.0",
    "fastapi>=0.116.1",
]

[project.optional-dependencies]
all = [
    # Keep extras broad so they don’t conflict with ProjectLuna
    "torch>=2.7.1,<3.0.0",
    "sentence-transformers>=4.1.0",
    "qdrant-client>=1.14.2,<2.0.0",
    "volcengine-python-sdk>=4.0.4,<5.0.0",
]
